# lahman

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/lahman/: __init__.py  _csv_reader.py  _downloader.py  _injector.py  _lahman.py  _locator.py
test/: test_lahman.py
